--- a/OrdersDashboard/Pages/Diagramm.razor
+++ b/OrdersDashboard/Pages/Diagramm.razor
@@ -35,7 +35,7 @@
     </div>
     <div class="pies">
         <div class="pie">
-            <SfAccumulationChart Height="100%" Width="100%" Title="ORDERS BY COUNTRIES" EnableBorderOnMouseMove="true" EnableAnimation="true" EnableCanvas="true">
+            <SfAccumulationChart Theme="Theme.BootstrapDark" Height="100%" Width="100%" Title="ORDERS BY COUNTRIES" EnableBorderOnMouseMove="true" EnableAnimation="false" EnableCanvas="true">
                 <AccumulationChartSeriesCollection>
                     <AccumulationChartSeries DataSource="@OrdersByCountries" XName="CountryName" YName="OrdersCount" Name="Orders" Explode="true">
                     </AccumulationChartSeries>
@@ -47,7 +47,7 @@
     </div>
     <div class="pies">
         <div class="pie">
-            <SfAccumulationChart Height="100%" Width="100%" Title="SALES BY CATEGORIES" EnableBorderOnMouseMove="true" EnableAnimation="true" EnableCanvas="true">
+            <SfAccumulationChart Theme="Theme.BootstrapDark" Height="100%" Width="100%" Title="SALES BY CATEGORIES" EnableBorderOnMouseMove="true" EnableAnimation="false" EnableCanvas="true">
                 <AccumulationChartSeriesCollection>
                     <AccumulationChartSeries DataSource="@SalesByCategories" XName="CategoryName" YName="CategorySales" Name="Categories" Explode="true">
                     </AccumulationChartSeries>
@@ -59,7 +59,7 @@
     </div>
     <div class="pies">
         <div class="pie">
-            <SfAccumulationChart Height="100%" Width="100%" Title="SALES BY COUNTRIES" EnableBorderOnMouseMove="true" EnableAnimation="true" EnableCanvas="true">
+            <SfAccumulationChart Theme="Theme.BootstrapDark" Height="100%" Width="100%" Title="SALES BY COUNTRIES" EnableBorderOnMouseMove="true" EnableAnimation="false" EnableCanvas="true">
                 <AccumulationChartSeriesCollection>
                     <AccumulationChartSeries DataSource="@SalesByCountries" XName="CountryName" YName="CountrySum" Name="CountrySum" Explode="true">
                     </AccumulationChartSeries>
@@ -69,36 +69,36 @@
             </SfAccumulationChart>
         </div>
     </div>
-    @*<div class="bars">
-            <div class="item bar">
-                <SfChart Height="100%">
-                    <ChartPrimaryXAxis ValueType="Syncfusion.Blazor.Charts.ValueType.Category"></ChartPrimaryXAxis>
-                    <ChartSeriesCollection>
-                        <ChartSeries DataSource="@SalesByCountries" XName="CountryName" YName="CountrySum" ColumnSpacing="0.2" ColumnWidth="0.7"
-                                     Type="ChartSeriesType.Bar">
-                        </ChartSeries>
-                    </ChartSeriesCollection>
-                </SfChart>
-            </div>
-            <div class="item bar">
-                <SfChart Height="100%">
-                    <ChartPrimaryXAxis ValueType="Syncfusion.Blazor.Charts.ValueType.Category"></ChartPrimaryXAxis>
-                    <ChartSeriesCollection>
-                        <ChartSeries DataSource="@SalesByCountries" XName="CountryName" YName="CountrySum" ColumnSpacing="0.2" ColumnWidth="0.7" Type="ChartSeriesType.Bar">
-                        </ChartSeries>
-                    </ChartSeriesCollection>
-                </SfChart>
-            </div>
-            <div class="item bar">
-                <SfChart Height="100%">
-                    <ChartPrimaryXAxis ValueType="Syncfusion.Blazor.Charts.ValueType.Category"></ChartPrimaryXAxis>
-                    <ChartSeriesCollection>
-                        <ChartSeries DataSource="@SalesByCountries" XName="CountryName" YName="CountrySum" ColumnSpacing="0.2" ColumnWidth="0.7" Type="ChartSeriesType.Bar">
-                        </ChartSeries>
-                    </ChartSeriesCollection>
-                </SfChart>
-            </div>
+    <div class="bars">
+        @*<div class="item bar">
+            <SfChart Height="100%">
+                <ChartPrimaryXAxis ValueType="Syncfusion.Blazor.Charts.ValueType.Double"></ChartPrimaryXAxis>
+                <ChartSeriesCollection>
+                    <ChartSeries DataSource="@SalesByCountries" XName="CountryName" YName="CountrySum" ColumnSpacing="0.2" ColumnWidth="0.7"
+                                 Type="ChartSeriesType.Bar">
+                    </ChartSeries>
+                </ChartSeriesCollection>
+            </SfChart>
         </div>*@
+        @*<div class="item bar">
+                <SfChart Height="100%">
+                    <ChartPrimaryXAxis ValueType="Syncfusion.Blazor.Charts.ValueType.Category"></ChartPrimaryXAxis>
+                    <ChartSeriesCollection>
+                        <ChartSeries DataSource="@SalesByCountries" XName="CountryName" YName="CountrySum" ColumnSpacing="0.2" ColumnWidth="0.7" Type="ChartSeriesType.Bar">
+                        </ChartSeries>
+                    </ChartSeriesCollection>
+                </SfChart>
+            </div>
+            <div class="item bar">
+                <SfChart Height="100%">
+                    <ChartPrimaryXAxis ValueType="Syncfusion.Blazor.Charts.ValueType.Category"></ChartPrimaryXAxis>
+                    <ChartSeriesCollection>
+                        <ChartSeries DataSource="@SalesByCountries" XName="CountryName" YName="CountrySum" ColumnSpacing="0.2" ColumnWidth="0.7" Type="ChartSeriesType.Bar">
+                        </ChartSeries>
+                    </ChartSeriesCollection>
+                </SfChart>
+            </div>*@
+    </div>
 </div>
 
 <style>
@@ -115,21 +115,24 @@
         padding: 0px;
     }
 
-    .cards{
-        display:grid;
-        grid-template-columns:1fr 1fr;
-        gap:6px;
-        margin-bottom:6px;
+    .cards {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        gap: 6px;
+        margin-bottom: 6px;
     }
+
     .item {
         padding: 6px;
         color: white;
         box-shadow: 5px 6px 8px 1px rgb(0 0 0 / 25%);
     }
+
     .image-info {
         max-height: 64px;
         max-width: 64px;
     }
+
     .card1 {
         background-color: #ff6a00
     }
@@ -186,7 +189,7 @@
     }
     /*Конец - Внутренние классы компонента SfCard*/
 
-    /**/ 
+    /**/
     e-chart {
         width: inherit !important;
         height: inherit !important;
@@ -196,18 +199,17 @@
         width: inherit !important;
         height: inherit !important;
     }
-    
-    /**/ 
+
+    /**/
 
 </style>
 
 @code {
     #region
-    SfAccumulationChart pie = new SfAccumulationChart();
 
-    public List<OrdersByCountry> OrdersByCountries = new ();
-    public List<SalesByCategory> SalesByCategories = new ();
-    public List<SalesByCountry> SalesByCountries = new ();
+    public List<OrdersByCountry> OrdersByCountries = new();
+    public List<SalesByCategory> SalesByCategories = new();
+    public List<SalesByCountry> SalesByCountries = new();
 
     protected override async Task OnInitializedAsync()
     {
